# CP-Algorithms

./: .gitignore  BFS.cpp  BigInteger.cpp  CMakeLists.txt  DFS.cpp  DSU.cpp  Dijkstra.cpp  FenwickTree.cpp  README.md  SegmentTree.cpp  Substring_count.cpp  bellman_ford.cpp  chinese_remainder_theorem.cpp  extended_gcd.cpp  kruskal.cpp  random_workspace.cpp  sieve.cpp  testing.py  tree_diameter.cpp
Binary_Search/: UVa_10077.cpp  UVa_10341.cpp  UVa_10567.cpp  UVa_10706.cpp  UVa_10742.cpp  UVa_11413.cpp  UVa_11621.cpp  UVa_11876.cpp  UVa_12192.cpp  UVa_679.cpp  UVa_957.cpp
Complete_search/Recursive_complete_search/: UVa_222.cpp  UVa_487.cpp  UVa_750_better.cpp  UVa_750_inef.cpp
DP/Coin_change_mastering/: 1_coin_change_finite.cpp  1_coin_change_infinite.cpp  CF_1382_D.cpp  UVa_00147.cpp  UVa_166.cpp  coin_change.cpp
DP/Max_1D_range_sum/: UVa_507.cpp
Segment_tree/: Number_of_mins_in_range.cpp  Range_sum_query.cpp
Two_Pointer/: CF_279B.cpp
Workspace/: .google-cookie  A.cpp  A.sh  Don't_you_forget!.txt  acl.sh  combined.cpp  combined.sh  first.r  in  in.txt  links  linux.sh  main  main.cpp  main.sh  need_to_work_on  nice_problems  out  out.html  problematic_problems  saif_links.cpp  stress.cpp  temp.cpp  temp.sh  template.cpp  test.py  todo
Workspace/LightOj/: 1005_Rooks.cpp  1005_Rooks_2.cpp  1013_Love_calculator.cpp  1017_Brush(III).cpp  1024_DNA_prefix.cpp
Workspace/Python_workspace/: out_coordinates.txt  test.py  testing_cv2.py
Workspace/Tips_and_tricks/: constructive_algorithm.md  dp.md  greedy.md  links.md  math  math.md  observations.md
(+77 files in other folders)
